Add default dashboard
Signed-off-by: Aviv.Galmidi <AvivGalmidi@gmail.com>

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="/static/bulma.css">
     <link rel="stylesheet" href="/static/jsoneditor.css">
     <link rel="stylesheet" href="/static/img/jsoneditor-icons.svg">
+    <link rel="stylesheet" href="/static/uPlot.min.css"/>
+    <script src="/static/uPlot.iife.min.js"></script>
     <script defer src="/static/fa-531.js"></script>
 
     <title>Curiefense Config Machine</title>
