--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <section class="section">
-      <div class="container">
+      <div class="container is-fluid">
         <div id="app"></div>
         <!-- built files will be auto injected -->
       </div>
