Side Menu + pinia state manager
Add pinia state manager
Add store state manager for Branches
Add new Side Menu component
Add branch selector to Side Menu
Remove branch selector from all pages
Remove unused menu items from Side Menu
Change order of menu items in Side Menu
Add placeholder menu items to Side Menu
Change routes of various pages around the system
Change logo
Change UI version to 5.0.0
Add API version to Header
Change "Site" title to "Web Proxy"
Add filter reset to RbzTable when changing columns
Remove DocumentSearch page from the system
Change name of "CurieDB" to "SystemDB"
Change Git History to be collapsible, start collapsed, and only load data on request
Fix issue in Global Filters "Updated @" showing NaN under certain conditions
Fix issue in Global Filters where "Clear all entries" button made "Create new section" under certain conditions
Change Content Filter Rules list table "Restrict Content Type" column to have new lines instead of commas

Signed-off-by: Aviv.Galmidi <AvivGalmidi@gmail.com>

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="is-fullheight">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,13 +17,13 @@
 
     <title>Curiefense Config Machine</title>
   </head>
-  <body>
+  <body class="is-fullheight">
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <section class="section">
-      <div class="container">
-        <div id="app"></div>
+    <section class="section is-fullheight">
+      <div class="container is-fluid  is-fullheight">
+        <div class="is-fullheight" id="app"></div>
         <!-- built files will be auto injected -->
       </div>
     </section>
