--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <script src="/static/uPlot.iife.min.js"></script>
     <script defer src="/static/fa-531.js"></script>
 
-    <title>Curiefense Config Machine</title>
+    <title>Reblaze Console</title>
   </head>
   <body class="is-fullheight">
     <noscript>
