--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,8 @@
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <section class="section is-fullheight pb-2">
-      <div class="container is-fluid  is-fullheight">
+    <section class="section is-fullheight pb-2 px-3">
+      <div class="container is-fluid is-fullheight">
         <div class="is-fullheight" id="app"></div>
         <!-- built files will be auto injected -->
       </div>
