Various changes around the system
Change whitespace around content card to be less notable
Removed unused css classes
Fix issue with mutation in RequestsUtils which affected publish in the open source solution
Change future time from `X units from now` to `In x units`
Fix bug in Quarantined expire sorting
Fix bug with edit entities with long names which pushed the rest of the data off-screen
Add missing `code` icon in Flow Control `host` field
Add status classes to Events Log chart
Change colors of traffic categories to be unique with status code colors
Change format in date picker from `dd-MM-yyyy` to `yyyy-MM-dd`
Fix bug in charts dates format
Change charts in Dashboard to be synced with one another
Change filter in Dashboard to be 2 filters, one for pod and one for Security Policy and Security Policy Entry

Signed-off-by: Aviv-Galmidi <AvivGalmidi@gmail.com>

--- a/public/index.html
+++ b/public/index.html
@@ -23,11 +23,11 @@
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <section class="section is-fullheight pb-2 px-3">
-      <div class="container is-fluid is-fullheight">
+    <div class="is-fullheight is-fullwidth py-0 px-0">
+      <div class="container is-fluid is-fullheight px-0">
         <div class="is-fullheight" id="app"></div>
         <!-- built files will be auto injected -->
       </div>
-    </section>
+    </div>
   </body>
 </html>
